--- a/00-K1-CS1B-FIA-APRIL-2022/K1_Question_3.Rmd
+++ b/00-K1-CS1B-FIA-APRIL-2022/K1_Question_3.Rmd
@@ -50,6 +50,8 @@ start of the current year.
  claims: the number of claims the policyholder submitted during the current year. 
 It has been suggested that drivers belonging to the old age category have more years 
 of no claims discount than younger drivers. 
+
+---
 (i) Plot two histograms for the number of years with no claims discount, one for 
 young policyholders and another for old policyholders. [5] 
 (ii) Comment on the suggestion that drivers belonging to the old age category 
@@ -60,7 +62,9 @@ histograms from part (i).
 young policyholders. 
 (b) policyholders with more than 2 years of no claims discount among old 
 policyholders. 
- [4] 
+
+---
+
 (iv) Test the hypothesis that the proportion of policyholders with more than 2 
 years of no claims discount is equal in both groups (young and old 
 policyholders). [6] 
@@ -73,7 +77,7 @@ To simplify the integration of the model into business processes, an insurer wis
 use only models with at most two explanatory variables. 
 (vi) Determine which two explanatory variables (out of age, LY and NCD) should 
 be used in a GLM for the claim counts if only two explanatory variables are 
-allowed. [8] 
+allowed. 
 (vii) Comment on the comparison of the fit of the models in parts (v) and (vi).  
 
 ```
@@ -81,13 +85,12 @@ allowed. [8]
 ---
 
 
-
-```{r}
 Q3
 (i)
 Plot histograms for no claims discount years:
-CS1B – Actuarial Statistics – Core Principles – April 2022 - Examiners’ report
-CS1B A2022 © Institute and Faculty of Actuaries
+```{r}
+
+
 NCD_old = NCD[age==1] 
 NCD_young = NCD[age==0] 
 hist(NCD_old, prob=TRUE, breaks = c(0,1,2,3,4,5)) 
@@ -96,11 +99,15 @@ hist(NCD_young, prob=TRUE, breaks = c(0,1,2,3,4,5))
 Alternative R code (this produces more accurate plots):
 hist(NCD_young, breaks=seq(-0.5,5.5,by=1))
 hist(NCD_old, breaks=seq(-0.5,5.5,by=1))
-#################################################
+```
+
+---
+
+
 (ii)
 The distribution for old policyholders is more concentrated on the right, 
 so the number of years of NCD seems to be higher for old policyholders. 
-```
+
 
 ---
 
@@ -111,13 +118,13 @@ so the number of years of NCD seems to be higher for old policyholders.
 Calculate proportions:
 prop_young = sum(NCD_young > 2)/length(NCD_young) 
 prop_young
-Proportion is 0.5736150 [½]
+Proportion is 0.5736150 
 Alternative R code:
 length(NCD_young[NCD_young>2])/length(NCD_young)
 (b)
 prop_old = sum(NCD_old > 2)/length(NCD_old) 
 prop_old
-Proportion is 0.9704187 [½]
+Proportion is 0.9704187 
 ```
 
 ---
@@ -130,6 +137,8 @@ length(NCD_old[NCD_old>2])/length(NCD_old)
 CS1B – Actuarial Statistics – Core Principles – April 2022 - Examiners’ report
 CS1B A2022 © Institute and Faculty of Actuaries
 (iv)
+
+---
 Test the hypothesis that prop of NCD >2 is equal for young and old, against alternative that 
 proportions are not equal: 
 NCDgreaterTwo = c(sum(NCD_young > 2), sum(NCD_old > 2)) 
@@ -145,12 +154,24 @@ sample estimates:
  prop 1 prop 2 
 0.5736150 0.9704187
 The 𝑝𝑝-value is very small, therefore we reject the null hypothesis of equal proportions. 
-(v)
+
+---
+
+#### Part (E)
+
 R code:
 glm(claims ~ age + LY + NCD, family = poisson)
 or
+
+```{r}
 glm(claims ~ factor(age) + LY + NCD, family = poisson) 
 summary(glm(claims ~ age + LY + NCD, family = poisson)) 
+
+
+```
+---
+
+
 Call:
 glm(formula = claims ~ age + LY + NCD, family = poisson)
 Deviance Residuals: 
@@ -167,10 +188,11 @@ Signif. codes: 0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 
 Null deviance: 11574 on 9999 degrees of freedom
 Residual deviance: 11015 on 9996 degrees of freedom
 AIC: 23104
-CS1B – Actuarial Statistics – Core Principles – April 2022 - Examiners’ report
-CS1B A2022 © Institute and Faculty of Actuaries
 
-(vi)
+---
+
+#### Part (F)
+
 We need to fit the three possible models with two variables each and compare the AIC 
 values:
 glm(claims ~ LY + NCD, family = poisson)$aic
@@ -185,3 +207,6 @@ The AIC for model LY + NCD (23102) is slightly lower than the AIC for
 age + LY + NCD (23104), but the AIC values are very close. 
 We would prefer model LY + NCD as it also involves fewer variables (it is a smaller 
 model). 
+---
+
+---
