--- a/00-K2-CS2B-FIA-APRIL-2022/K2-Question1.Rmd
+++ b/00-K2-CS2B-FIA-APRIL-2022/K2-Question1.Rmd
@@ -41,22 +41,23 @@ distribution with parameter 1,000. Individual claim amounts follow a Gamma
 distribution with shape parameter α = 750 and rate parameter λ = 0.25. 
 (i) Generate 20,000 simulated aggregate claim values for this insurer, using a 
 random number generator seed of 914. Use the R function, head(), to 
-display the first seven simulated claim values in your answer script. [7] 
+display the first seven simulated claim values in your answer script. 
 (ii) Determine the mean and the standard deviation of the simulated aggregate 
-claim values from part (i). [3] 
+claim values from part (i). 
+---
 (iii) Plot the empirical density function of the simulated aggregate claim values 
 from part (i), setting the x-axis range from 2,600,000 to 3,300,000 and the 
 y-axis range from 0 to 0.0000045. [5] 
 (iv) Suggest a suitable distribution, including its parameters, that approximates the 
-simulated aggregate claim values from part (i). [2] 
+simulated aggregate claim values from part (i).  
 (v) Generate 20,000 values from your suggested distribution in part (iv) using a 
 random number generator seed of 914. Use the R function, head(), to 
-display the first seven generated values in your answer script. [3] 
+display the first seven generated values in your answer script. 
 (vi) Plot the empirical density function of the simulated values in part (v) as a 
 different coloured line in the chart that was produced in part (iii).  
 
 
-
+---
 
 Solutions for Subject CS2B - April 2022
 Q1
@@ -70,6 +71,7 @@ s[i] = sum(x)}
 head(s, 7) 
  2860469 2915250 2998362 3223837 2915546 2971731 3132371
 
+---
 ALTERNATIVE SOLUTION:
 set.seed(914) 
 s = numeric(20000) 
@@ -80,6 +82,7 @@ s[i] = sum(x)}
 head(s, 7) 
  2856968 2929369 2910782 2941784 3041930 3057008 2953528
 
+---
 (ii)
 mean(s) 
  3000982 
@@ -104,13 +107,19 @@ with mean = 3,000,982 …
 and standard deviation = 93,872.61
 OR
 and variance = 93,872.61^2 = 8,812,067,277 
+---
 (v)
+```{r}
 set.seed(914) 
 approx_dist = rnorm(20000, mean(s), sd(s)) 
 head(approx_dist, 7) 
+```
  2856910 3082046 2903046 2999750 3229462 2919827 2976414
 
+---
 (vi)
+
+```{r eval=FALSE}
 lines( 
 density(approx_dist), 
 col = "red") 
@@ -119,7 +128,21 @@ legend = c("Simulated Claims", "Approximate Normal
 Distribution"), 
  col = c("black","red"), 
  pch = 7)
-CS2B - Risk Modelling and Survival Analysis - Core Principles - April 2022 - Examiners’ report
+```
 ---
 
-[Total 24]
+
+```{r echo=FALSE}
+lines( 
+density(approx_dist), 
+col = "red") 
+legend("topright", 
+legend = c("Simulated Claims", "Approximate Normal 
+Distribution"), 
+ col = c("black","red"), 
+ pch = 7)
+```
+---
+
+
+---
