--- a/00-L1-CS1B-ASI-MARCH-2022/L1-Question1.Rmd
+++ b/00-L1-CS1B-ASI-MARCH-2022/L1-Question1.Rmd
@@ -54,12 +54,12 @@ predict, anova - to answer parts of this question.
 
 ---
 
-i) Calculate Sxx, Sxy and Syy. (7)
+i) Calculate Sxx, Sxy and Syy. 
 ii) Calculate alpha, beta and sigma2
 using results in part (i). (3)
 iii) Calculate fitted values of y using results in part (ii). (1)
 iv) Calculate residuals using results of earlier parts and Calculate mean and variance of 
-residuals and comment on the result. (3)
+residuals and comment on the result. 
 v) Calculate 95% confidence interval for beta and comment if we can conclude that beta 
 is not zero stating the Null and alternate hypothesis. Calculate 95% confidence interval 
 for sigma2
@@ -67,21 +67,17 @@ for sigma2
 
 --- 
  
-Note: Candidates are expected to find tabulated value using R. (7)
+Note: Candidates are expected to find tabulated value using R. 
 vi) State SSTOT and Calculate SSREG and SSRES. Hence calculate the proportion of 
 variability explained by the model using SSREG and SSRES and comment on the result. 
 Calculate adjusted R2
-and compare it with R^2 to explain result. (5)
-vii)Calculate mean predicted response when x=52 and 95% confidence interval for the 
+and compare it with R^2 to explain result. 
+vii)Calculate mean predicted response when $x=52$ and 95% confidence interval for the 
 same. Note: Candidates are expected to find tabulated value using R. 
 
 ---
 
-Institute of Actuaries of India
-Subject CS1-Actuarial Statistics (Paper B)
-March 2022 Examination
 
----
 
 
 ### Solution 1:
@@ -89,8 +85,8 @@ March 2022 Examination
 #### PArt i) 
 
 ```{r}
-x= c(5,10,15,20,25,30,35,40,45,50,55,60)
-y=c(15,12,25,23,35,36,33,38,43,45,50,53)
+x = c(5,10,15,20,25,30,35,40,45,50,55,60)
+y = c(15,12,25,23,35,36,33,38,43,45,50,53)
 ```
 
 ```{r}
@@ -273,21 +269,21 @@ Hence, can conclude that beta is not equal to zero at 5% level.
 ---
 
 Tabulated values of Chi square having 10 df can be obtained as
-> chitenend1=qchisq(df=10, p=0.025)
-> chitenend2=qchisq(df=10,p=0.975)
-> chitenend1
+chitenend1=qchisq(df=10, p=0.025)
+chitenend2=qchisq(df=10,p=0.975)
+chitenend1
 [1] 3.246973
-> chitenend2
+chitenend2
 [1] 20.48318
 End points of CI would be
 
 ---
 
-> sigmasqend1=(12-2)*sigmasq/chitenend1
-> sigmasqend2=(12-2)*sigmasq/chitenend2
-> sigmasqend1
+sigmasqend1=(12-2)*sigmasq/chitenend1
+sigmasqend2=(12-2)*sigmasq/chitenend2
+sigmasqend1
 [1] 36.55907
-> sigmasqend2
+sigmasqend2
 [1] 5.795307
 Hence 95% Confidence interval for sigma^2 is (5.795,36.559)
 
@@ -301,12 +297,12 @@ Hence 95% Confidence interval for sigma^2 is (5.795,36.559)
 
 SSTOT = Syy = 1888 (as calculated in part i)
 SSREG = Sxy^2/Sxx 
-> ss_reg=Sxy^2/Sxx
-> ss_reg
+ss_reg=Sxy^2/Sxx
+ss_reg
 [1] 1769.294
 SSRES = SSTOT - SSREG
-> ss_res=Syy-ss_reg
-> ss_res
+ss_res=Syy-ss_reg
+ss_res
 [1] 118.7063
 ```
 ---
@@ -314,8 +310,8 @@ SSRES = SSTOT - SSREG
 ```{r}
 R^2 denotes the % of variability explained by the model
 R^2 = SSREG / (SSREG + SSRES)
-> Rsq = ss_reg/(ss_reg+ss_res)
-> Rsq
+Rsq = ss_reg/(ss_reg+ss_res)
+Rsq
 [1] 0.9371259
 Model is a good fit as 93.7% of the variability is explained by the model.
 
@@ -356,13 +352,13 @@ Emean52
   
 Expected value of mean predicted response is 47.718 when x=52
 varofmean52=((1/12)+(52-meanx)^2/Sxx)*sigmasq
-> varofmean52
+varofmean52
 [1] 2.251822
-> mean52end1=Emean52+qt(p=0.025, lower.tail = T, df=10)*sqrt(varofmean52)
-> mean52end2=Emean52-qt(0.025,lower.tail = T, df=10)*sqrt(varofmean52)
-> mean52end1
+mean52end1=Emean52+qt(p=0.025, lower.tail = T, df=10)*sqrt(varofmean52)
+mean52end2=Emean52-qt(0.025,lower.tail = T, df=10)*sqrt(varofmean52)
+mean52end1
 [1] 44.37462
-> mean52end2
+mean52end2
 [1] 51.06174
 Hence 95% confidence interval for the mean predicted response is (44.3746,51.0617)
 
