--- a/00-K1-CS1B-FIA-APRIL-2022/K1_Question_3.Rmd
+++ b/00-K1-CS1B-FIA-APRIL-2022/K1_Question_3.Rmd
@@ -37,8 +37,8 @@ pre {
 * Question 1
 
 ---
-CS1B A2022–4 
-3 Consider a sample of 10,000 car insurance policies sold to drivers who have had a 
+
+Consider a sample of 10,000 car insurance policies sold to drivers who have had a 
 driving licence for no more than 5 years. The data are given in the file 
 CarInsurance.Rdata, which contains the following four variables: 
  age: a factor taking the values 0 for young and 1 for old; this refers to the age of 
@@ -52,11 +52,14 @@ It has been suggested that drivers belonging to the old age category have more y
 of no claims discount than younger drivers. 
 
 ---
+
+#### Exercises 
 (i) Plot two histograms for the number of years with no claims discount, one for 
-young policyholders and another for old policyholders. [5] 
+young policyholders and another for old policyholders. 
 (ii) Comment on the suggestion that drivers belonging to the old age category 
 have more years of no claims discount than young drivers, using the 
 histograms from part (i).  
+
 (iii) Calculate the proportion of: 
 (a) policyholders with more than 2 years of no claims discount among 
 young policyholders. 
@@ -67,10 +70,13 @@ policyholders.
 
 (iv) Test the hypothesis that the proportion of policyholders with more than 2 
 years of no claims discount is equal in both groups (young and old 
-policyholders). [6] 
+policyholders).  
 An analyst assumes that the number of claims per year has a Poisson distribution. The 
 analyst wishes to fit a generalised linear model (GLM) to the observed claim counts 
 using age,LY and NCD as explanatory variables. 
+
+---
+
 (v) Fit a GLM to the claim counts with age, LY and NCD as the main effect 
 explanatory variables. [3] 
 To simplify the integration of the model into business processes, an insurer wishes to 
@@ -95,8 +101,13 @@ NCD_old = NCD[age==1]
 NCD_young = NCD[age==0] 
 hist(NCD_old, prob=TRUE, breaks = c(0,1,2,3,4,5)) 
 hist(NCD_young, prob=TRUE, breaks = c(0,1,2,3,4,5)) 
+```
+
+---
 
 Alternative R code (this produces more accurate plots):
+
+```{r}
 hist(NCD_young, breaks=seq(-0.5,5.5,by=1))
 hist(NCD_old, breaks=seq(-0.5,5.5,by=1))
 ```
@@ -104,7 +115,7 @@ hist(NCD_old, breaks=seq(-0.5,5.5,by=1))
 ---
 
 
-(ii)
+#### Part (ii)
 The distribution for old policyholders is more concentrated on the right, 
 so the number of years of NCD seems to be higher for old policyholders. 
 
@@ -124,15 +135,15 @@ length(NCD_young[NCD_young>2])/length(NCD_young)
 (b)
 prop_old = sum(NCD_old > 2)/length(NCD_old) 
 prop_old
-Proportion is 0.9704187 
-```
 
+```
+Proportion is 0.9704187 
 ---
 
-
+Alternative R code:
 
 ```{r}
-Alternative R code:
+
 length(NCD_old[NCD_old>2])/length(NCD_old)
 CS1B – Actuarial Statistics – Core Principles – April 2022 - Examiners’ report
 CS1B A2022 © Institute and Faculty of Actuaries
