--- a/00-L2-CS2B-ASI-MARCH-2022/L2-Question1.Rmd
+++ b/00-L2-CS2B-ASI-MARCH-2022/L2-Question1.Rmd
@@ -42,15 +42,19 @@ conduct a surgery for a patient or not. This is based on testing the presence of
 in human body. You need to test the effectiveness of the decision tree in predicting the need 
 for surgery correctly.
 Below is the decision tree as shown:
+
+
+---
+
 i) Write a function in R to decide whether a surgery is needed or not based on the value of 
 three parameters. Denote Surgery required as 1 and Surgery not required as 0. (3)
-ii) Check the value of function with parameter 1=180, parameter 2=75, parameter 3=350 (1)
+ii) Check the value of function with parameter 1=180, parameter 2=75, parameter 3=350 
 iii) Load CS2B_Mar22_Dataset1.csv file into R and name it as decisionData. This data 
 contains the three parameter values for 50 patients and the actual decision taken with 
 respect to the surgery. Apply the function created in (i) to this data. Paste the output after 
-applying the function in your answer sheet. (3)
-iv) Compare the predicted and actual decisions by computing precision, recall and F1 score. (6)
-v) Comment on the results obtained in (iv). (2)
+applying the function in your answer sheet. 
+iv) Compare the predicted and actual decisions by computing precision, recall and F1 score. 
+v) Comment on the results obtained in (iv). 
 
 ---
 Solution 1:
@@ -65,6 +69,12 @@ f=function(x){
 f=function(x){
 ifelse(x[1]>150 & x[2]>50,0,ifelse(x[3]>300,1,0))
 }
+
+```
+
+---
+
+```{r}
 #OR
 f=function(x){
 ifelse(x[1]>150 & x[2]>50,ifelse(x[3]>300,0,1),0)
@@ -163,4 +173,6 @@ orrectly), as well as how robust it is (it does not miss a significant number
 of instances)
 # Low F1 score indicates that the model can be modified to increase its perfo
 rmance
+
+---
 
