--- a/00-L2-CS2B-ASI-MARCH-2022/L2-Question2.Rmd
+++ b/00-L2-CS2B-ASI-MARCH-2022/L2-Question2.Rmd
@@ -43,18 +43,21 @@ These predictions are expected to help the authorities to set up adequate protoc
 managing the post-confinement due to COVID-19.
 There are five states in the model namely Infected, Quarantined, Hospitalised, Recovered and 
 Death which are measured at the end of each week.
+---
 The ‘CS2B_Mar22_Dataset2.csv’ file contains the recorded weekly transitions between 
 different states. Each row contains a pair of State_From and State_To where State_From 
 denotes the starting state and State_To denotes the state after a week’s transition. 
 The following notation has been used:
 I-Infected, Q-Quarantined, H-Hospitalised, R-Recovered, D-Death
 Those states which have no transition to any another state can be assumed to be absorbing.
+---
 Load ‘CS2B_Mar22_Dataset2.csv’ file into R and name it as coviddata.
 i) Using transition pair data, compute the transition probabilities between each state. (6)
 ii) Find out the absorbing states in the model. (2)
 iii) Create Markov chain model named “covid19” in R with the respective state space and 
 transition probability matrix. Plot this model and paste the plot into your answer sheet. 
 (Use library-markovchain) (4)
+---
 Parameter 1>150 and Parameter 2 >50
 Parameter 
 3>300
@@ -67,14 +70,14 @@ required
 ---
  Page 3 of 4
 iv) Using the Markov chain, given that the individual is infected, compute the probability that:
-a) He will be in quarantine after a week (1)
-b) He will either be in hospital or in quarantine after two weeks (2)
+a) He will be in quarantine after a week 
+b) He will either be in hospital or in quarantine after two weeks 
 c) He will recover after 3 weeks (2)
 v) COVID-19 pandemic is expected to end in a quarter’s time. 
 Estimate the number of people who will be (a) Quarantined (b) Hospitalized (c) Recovered 
 and (d) Died out of the current 20,000 quarantined and 10,000 hospitalised individuals. 
-(Answer to nearest whole number, Assume 13 weeks in a quarter) (5)
-vi) Comment on your results obtained in (v). (3)
+(Answer to nearest whole number, Assume 13 weeks in a quarter)
+vi) Comment on your results obtained in (v). 
 [25]
 
 Q. 3) An AR
@@ -82,15 +85,22 @@ Q. 3) An AR
 ---
 Solution 2:
 # i)
-covid_data=read.csv("D:\\IAI Question Paper\\Mar22 Diet\\CS2B_Mar22_Dataset2.
-csv")
+
+```{r}
+covid_data=read.csv("CS2B_Mar22_Dataset2.csv")
 covid_data$StateFrom = as.factor(covid_data$StateFrom)
 covid_data$State.To = as.factor(covid_data$State.To)
 States_From = levels(covid_data$StateFrom)
 States_To = levels(covid_data$State.To)
 States = unique(c(States_From,States_To))
+```
+
+---
+
+```{r}
 # Transition Probabilities for each pair
 transitions_Master = c()
+
 for (i in States) {
  for (j in States) {
  
@@ -103,8 +113,14 @@ for (i in States) {
  }
  
 }
-transition_matrix = matrix(transitions_Master, nrow=5, byrow = T, dimnames=li
-st(States, States))
+
+```
+
+---
+
+```{r}
+transition_matrix = matrix(transitions_Master, nrow=5, 
+                           byrow = T, dimnames=list(States, States))
 transition_matrix
 ## H I Q D R
 ## H 0.2 0 0.0 0.2 0.6
@@ -112,12 +128,14 @@ transition_matrix
 ## Q 0.2 0 0.3 0.0 0.5
 ## D 0.0 0 0.0 1.0 0.0
 ## R 0.0 0 0.0 0.0 1.0
- (6)
-#(ii)
-# The two absorbing states are "Recovered" and "Death" (2)
-# (iii)
+```
+
 ---
-Page 5 of 14
+
+The two absorbing states are "Recovered" and "Death"
+
+
+```{r}
 library(markovchain)
 ## Warning: package 'markovchain' was built under R version 4.0.5
 ## Package: markovchain
@@ -127,6 +145,13 @@ library(markovchain)
 covid19=new("markovchain",states=c("H","I","Q", "D","R"),
  transitionMatrix=transition_matrix)
 covid19
+
+```
+
+
+---
+
+```{r}
 ## Unnamed Markov chain 
 ## A 5 - dimensional discrete Markov Chain defined by the following states: 
 ## H, I, Q, D, R 
@@ -138,19 +163,26 @@ covid19
 ## D 0.0 0 0.0 1.0 0.0
 ## R 0.0 0 0.0 0.0 1.0
 plot(covid19)
- (4)
+```
 # (iv)
 # (a)
 ---
 Page 6 of 14
+```{r}
 initialstate=c(0,1,0,0,0)
 afterweek=initialstate*(covid19)
 afterweek
 ## H I Q D R
 ## [1,] 0.4 0 0.6 0 0
 ## [1] 0.6
+```
+
+---
+
 (1)
 # (b)
+
+```{r}
 aftertwoweeks=initialstate*(covid19*covid19)
 aftertwoweeks
 ## H I Q D R
@@ -158,6 +190,9 @@ aftertwoweeks
 # Probability of either hospital or quarantine after 2 weeks
 p1 = aftertwoweeks[1]+aftertwoweeks[3]
 p1
+```
+---
+
 ## [1] 0.38 (2)
 # (c)
 afterthreeweeks=initialstate*(covid19*covid19*covid19)
@@ -171,6 +206,8 @@ p2
 # (v)
 # Long term probability (after 13 weeks)
 # Quarantined People
+
+```{r}
 initial_Q = c(0,0,1,0,0)
 after_quarter = initial_Q*(covid19^13)
 initial_H = c(1,0,0,0,0)
@@ -179,8 +216,11 @@ Recovered = 20000*after_quarter[5]+10000*after_quarter1[5]
 Died = 20000*after_quarter[4]+10000*after_quarter1[4]
 Quarantined = 20000*after_quarter[3]+10000*after_quarter1[3]
 Hospitalized = 20000*after_quarter[1]+10000*after_quarter1[1]
+
+```
 ---
 Page 7 of 14
+```{r}
 round(Recovered,0)
 ## [1] 26071
 round(Died,0)
@@ -189,9 +229,14 @@ round(Hospitalized,0)
 ## [1] 0
 round(Quarantined,0)
 ## [1] 0
-(5)
-# (vi)
-# In the long run, everyone needs to reach a steady state probabilities. 
-# As there are two absorbing states, one of the two is the destination
-# The other states are completely zeroes
- (3)
+```
+
+---
+
+#### Part (6)
+
+In the long run, everyone needs to reach a steady state probabilities. 
+As there are two absorbing states, one of the two is the destination
+The other states are completely zeroes
+
+---
